public/assets/master.css
/* ... */
      @media screen and (min-width: 3000px) {
    /* Styles for screens with a minimum width of 1200px (larger screens) */
      .exprt-1 {
          /* margin-left: 1280px; Adjust the margin as per your needs */
          /* margin-right: 1280px; Adjust the margin as per your needs */
      }
      .exprt-2 {
        /* margin-left: 1280px; Adjust the margin as per your needs
        margin-right: 1280px; Adjust the margin as per your needs */
    }
    .exprt-3 {
        /* margin-left: 355px; Adjust the margin as per your needs
        margin-right: 355px; Adjust the margin as per your needs */
    }
    .exprt-4 {
        /* margin-left: 355px; Adjust the margin as per your needs
        margin-right: 355px; Adjust the margin as per your needs */
    }
    .exprt-5 {
        /* margin-left: 355px; Adjust the margin as per your needs
        margin-right: 355px; Adjust the margin as per your needs */
    }
    .exprt-6 {
        /* margin-left: 355px; Adjust the margin as per your needs
        margin-right: 355px; Adjust the margin as per your needs */
    }
    .exprt-7 {
        /* margin-left: 355px; Adjust the margin as per your needs
        margin-right: 355px; Adjust the margin as per your needs */
    }
    .exprt-8 {
        /* margin-left: 355px; Adjust the margin as per your needs
        margin-right: 355px; Adjust the margin as per your needs */
    }
      }

      .exprt-row1 {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-content: center;
        justify-content: center;
        align-items: center;
        gap: 273px;
        /* width: 1246px; */
    }
    .exprt-row2 {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-content: center;
        justify-content: space-between;
        align-items: center;
        /* width: 1246px; */
        margin-bottom: 60px;
    }
    .exprt-row11 {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-content: center;
        justify-content: space-between;
        align-items: center;
        /* width: 1246px; */
        margin-bottom: 60px;
    }
    .exprt-row3 {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-content: center;
        justify-content: space-between;
        align-items: center;
        /* width: 1246px; */
        margin-bottom: 60px;
    }

    .exprt-row4 {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-content: center;
        justify-content: space-between;
        align-items: center;
        /* width: 1246px; */
        margin-bottom: 60px;
    }

    .exprt-row5 {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-content: center;
        justify-content: space-between;
        align-items: center;
        /* width: 1246px; */
        margin-bottom: 60px;
    }

    .exprt-row6 {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-content: center;
        justify-content: space-between;
        align-items: center;
        /* width: 1246px; */
        margin-bottom: 60px;
    }

    .exprt-row7 {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-content: center;
        justify-content: space-between;
        align-items: center;
        /* width: 1246px; */
        margin-bottom: 60px;
    }

    .exprt-row8 {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-content: center;
        justify-content: space-between;
        align-items: center;
        /* width: 1246px; */
        margin-bottom: 60px;
    }
/* expert */

/* web3 */
.web3-1 {
    width: 1465px;
    height: auto;
    text-align: center;
    display: flex;
    justify-content: center;
}

.web3-2 {
    width: 100%;
    height: auto;
    margin-bottom: 88px;
    text-align: center;
    display: flex;
    justify-content: center;
}

.web3-3 {
    width: 1465px;
    height: auto;
    margin-bottom: 68px;
    text-align: center;
    display: flex;
    justify-content: center;
}

.web3-4 {
    width: 100%;
    height: auto;
    margin-bottom: 128px;
    text-align: center;
    display: flex;
    justify-content: center;
}

.web3-5 {
    width: 100%;
    display: flex;
    flex-direction: column;
}

.web3-6 {
    width: 1153px;
    height: auto;
}

@media screen and (min-width: 1200px) {
    .web3-1 {
        /* margin-left: 355px; Adjust the margin as per your needs */
        /* margin-right: 355px; Adjust the margin as per your needs */
    }
    .web3-2 {
        /* margin-left: 355px; Adjust the margin as per your needs
        margin-right: 355px; Adjust the margin as per your needs */
    }
    .web3-3 {
        /* margin-left: 355px; Adjust the margin as per your needs
        margin-right: 355px; Adjust the margin as per your needs */
    }
    .web3-4 {
        /* margin-left: 355px; Adjust the margin as per your needs
        margin-right: 355px; Adjust the margin as per your needs */
    }
}

@media screen and (min-width: 2000px) {
    .web3-1 {
        /* margin-left: 600px; Adjust the margin as per your needs
        margin-right: 600px; Adjust the margin as per your needs */
    }
    .web3-2 {
        /* margin-left: 600px; Adjust the margin as per your needs
        margin-right: 600px; Adjust the margin as per your needs */
    }
    .web3-3 {
        /* margin-left: 600px; Adjust the margin as per your needs
        margin-right: 600px; Adjust the margin as per your needs */
    }
    .web3-4 {
        /* margin-left: 600px; Adjust the margin as per your needs
        margin-right: 600px; Adjust the margin as per your needs */
    }
}
/* ... */

